--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,12 @@ ServiceFabricBackup/
 
 # Microsoft Fakes
 FakesAssemblies/
+
+# OS generated
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
