Added solution for Day2

--- a/AdventOfCode2023/AdventOfCode2023.csproj
+++ b/AdventOfCode2023/AdventOfCode2023.csproj
@@ -42,11 +42,13 @@
     <ItemGroup>
         <Compile Include="FileOperations.cs" />
         <Compile Include="Problems\Day1_Trebuchet.cs" />
+        <Compile Include="Problems\Day2_CubeConundrum.cs" />
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
     </ItemGroup>
     <ItemGroup>
       <Content Include="Problems\Day1_Trebuchet_Input.txt" />
+      <Content Include="Problems\Day2_CubeConundrum_Input.txt" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
