Added solution for Day5

--- a/AdventOfCode2023/AdventOfCode2023.csproj
+++ b/AdventOfCode2023/AdventOfCode2023.csproj
@@ -45,6 +45,7 @@
         <Compile Include="Problems\Day2_CubeConundrum.cs" />
         <Compile Include="Problems\Day3_GearRatios.cs" />
         <Compile Include="Problems\Day4_Scratchcards.cs" />
+        <Compile Include="Problems\Day5_IfYouGiveASeedAFertilizer.cs" />
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
     </ItemGroup>
@@ -53,6 +54,7 @@
       <Content Include="Problems\Day2_CubeConundrum_Input.txt" />
       <Content Include="Problems\Day3_GearRatios_Input.txt" />
       <Content Include="Problems\Day4_Scratchcards_Input.txt" />
+      <Content Include="Problems\Day5_IfYouGiveASeedAFertilizer_Input.txt" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
