--- a/AdventOfCode2023/AdventOfCode2023.csproj
+++ b/AdventOfCode2023/AdventOfCode2023.csproj
@@ -46,6 +46,7 @@
         <Compile Include="Problems\Day3_GearRatios.cs" />
         <Compile Include="Problems\Day4_Scratchcards.cs" />
         <Compile Include="Problems\Day5_IfYouGiveASeedAFertilizer.cs" />
+        <Compile Include="Problems\Day6_WaitForIt.cs" />
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
     </ItemGroup>
@@ -55,6 +56,7 @@
       <Content Include="Problems\Day3_GearRatios_Input.txt" />
       <Content Include="Problems\Day4_Scratchcards_Input.txt" />
       <Content Include="Problems\Day5_IfYouGiveASeedAFertilizer_Input.txt" />
+      <Content Include="Problems\Day6_WaitForIt_Input.txt" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
