--- a/AdventOfCode2023/AdventOfCode2023.csproj
+++ b/AdventOfCode2023/AdventOfCode2023.csproj
@@ -47,6 +47,10 @@
         <Compile Include="Problems\Day4_Scratchcards.cs" />
         <Compile Include="Problems\Day5_IfYouGiveASeedAFertilizer.cs" />
         <Compile Include="Problems\Day6_WaitForIt.cs" />
+        <Compile Include="Problems\Day7\Day7_CamelCards.cs" />
+        <Compile Include="Problems\Day7\Hand.cs" />
+        <Compile Include="Problems\Day7\HandComparer.cs" />
+        <Compile Include="Problems\Day7\HandType.cs" />
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
     </ItemGroup>
@@ -57,6 +61,7 @@
       <Content Include="Problems\Day4_Scratchcards_Input.txt" />
       <Content Include="Problems\Day5_IfYouGiveASeedAFertilizer_Input.txt" />
       <Content Include="Problems\Day6_WaitForIt_Input.txt" />
+      <Content Include="Problems\Day7\Day7_CamelCards_Input.txt" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
