Relocated Day 1 solution

--- a/AdventOfCode2023/AdventOfCode2023.csproj
+++ b/AdventOfCode2023/AdventOfCode2023.csproj
@@ -42,7 +42,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="FileOperations.cs" />
-        <Compile Include="Problems\Day1_Trebuchet.cs" />
+        <Compile Include="Problems\Day1\Day1_Trebuchet.cs" />
         <Compile Include="Problems\Day2_CubeConundrum.cs" />
         <Compile Include="Problems\Day3_GearRatios.cs" />
         <Compile Include="Problems\Day4_Scratchcards.cs" />
@@ -56,7 +56,7 @@
         <Compile Include="Properties\AssemblyInfo.cs"/>
     </ItemGroup>
     <ItemGroup>
-      <Content Include="Problems\Day1_Trebuchet_Input.txt" />
+      <Content Include="Problems\Day1\Day1_Trebuchet_Input.txt" />
       <Content Include="Problems\Day2_CubeConundrum_Input.txt" />
       <Content Include="Problems\Day3_GearRatios_Input.txt" />
       <Content Include="Problems\Day4_Scratchcards_Input.txt" />
