--- a/AdventOfCode2023/AdventOfCode2023.csproj
+++ b/AdventOfCode2023/AdventOfCode2023.csproj
@@ -45,7 +45,7 @@
         <Compile Include="Problems\Day1\Day1_Trebuchet.cs" />
         <Compile Include="Problems\Day2\Day2_CubeConundrum.cs" />
         <Compile Include="Problems\Day3\Day3_GearRatios.cs" />
-        <Compile Include="Problems\Day4_Scratchcards.cs" />
+        <Compile Include="Problems\Day4\Day4_Scratchcards.cs" />
         <Compile Include="Problems\Day5_IfYouGiveASeedAFertilizer.cs" />
         <Compile Include="Problems\Day6_WaitForIt.cs" />
         <Compile Include="Problems\Day7\Day7_CamelCards.cs" />
@@ -59,7 +59,7 @@
       <Content Include="Problems\Day1\Day1_Trebuchet_Input.txt" />
       <Content Include="Problems\Day2\Day2_CubeConundrum_Input.txt" />
       <Content Include="Problems\Day3\Day3_GearRatios_Input.txt" />
-      <Content Include="Problems\Day4_Scratchcards_Input.txt" />
+      <Content Include="Problems\Day4\Day4_Scratchcards_Input.txt" />
       <Content Include="Problems\Day5_IfYouGiveASeedAFertilizer_Input.txt" />
       <Content Include="Problems\Day6_WaitForIt_Input.txt" />
       <Content Include="Problems\Day7\Day7_CamelCards_Input.txt" />
