--- a/AdventOfCode2023/AdventOfCode2023.csproj
+++ b/AdventOfCode2023/AdventOfCode2023.csproj
@@ -46,7 +46,8 @@
         <Compile Include="Problems\Day2\Day2_CubeConundrum.cs" />
         <Compile Include="Problems\Day3\Day3_GearRatios.cs" />
         <Compile Include="Problems\Day4\Day4_Scratchcards.cs" />
-        <Compile Include="Problems\Day5_IfYouGiveASeedAFertilizer.cs" />
+        <Compile Include="Problems\Day5\Day5_IfYouGiveASeedAFertilizer.cs" />
+        <Compile Include="Problems\Day5\MapData.cs" />
         <Compile Include="Problems\Day6_WaitForIt.cs" />
         <Compile Include="Problems\Day7\Day7_CamelCards.cs" />
         <Compile Include="Problems\Day7\Hand.cs" />
@@ -60,7 +61,7 @@
       <Content Include="Problems\Day2\Day2_CubeConundrum_Input.txt" />
       <Content Include="Problems\Day3\Day3_GearRatios_Input.txt" />
       <Content Include="Problems\Day4\Day4_Scratchcards_Input.txt" />
-      <Content Include="Problems\Day5_IfYouGiveASeedAFertilizer_Input.txt" />
+      <Content Include="Problems\Day5\Day5_IfYouGiveASeedAFertilizer_Input.txt" />
       <Content Include="Problems\Day6_WaitForIt_Input.txt" />
       <Content Include="Problems\Day7\Day7_CamelCards_Input.txt" />
     </ItemGroup>
